--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,8 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <h1>Wit.ai-Facebook-Connector</h1>
+	<img src="/wit-fb-connector-logo.png">
+	<h1>Wit.ai-Facebook-Connector</h1>
     <p>Connects a Facebook App to Wit.ai in order to create a Chatbot</p>
   </div>
 </div>
